[gd_scene load_steps=24 format=3 uid="uid://b6hrktoise2ji"]

[ext_resource type="Script" uid="uid://c5deg6k04uij2" path="res://Nodes/Command.gd" id="1_l0kiu"]
[ext_resource type="Texture2D" uid="uid://dno0spmwh4kov" path="res://Nodes/Hourglass.png" id="2_qna3k"]
[ext_resource type="Texture2D" uid="uid://csjjbw7dnc51a" path="res://Icons/Inherit.svg" id="3_kytcc"]
[ext_resource type="Texture2D" uid="uid://dgcqwwuv1m48b" path="res://Icons/Copy.svg" id="4_0o8ph"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tas32"]
atlas = ExtResource("2_qna3k")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5q5b"]
atlas = ExtResource("2_qna3k")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_01srn"]
atlas = ExtResource("2_qna3k")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxfrt"]
atlas = ExtResource("2_qna3k")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bn30"]
atlas = ExtResource("2_qna3k")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvoov"]
atlas = ExtResource("2_qna3k")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_m48gl"]
atlas = ExtResource("2_qna3k")
region = Rect2(252, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fsum"]
atlas = ExtResource("2_qna3k")
region = Rect2(294, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1t7x"]
atlas = ExtResource("2_qna3k")
region = Rect2(336, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbd80"]
atlas = ExtResource("2_qna3k")
region = Rect2(378, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pyat"]
atlas = ExtResource("2_qna3k")
region = Rect2(420, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8rgr"]
atlas = ExtResource("2_qna3k")
region = Rect2(462, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6u08"]
atlas = ExtResource("2_qna3k")
region = Rect2(504, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_blf8y"]
atlas = ExtResource("2_qna3k")
region = Rect2(546, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_046av"]
atlas = ExtResource("2_qna3k")
region = Rect2(588, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_sf5fb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tas32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5q5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01srn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxfrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bn30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvoov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m48gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fsum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1t7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbd80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pyat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8rgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6u08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blf8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_046av")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gis47"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmsdb"]
bg_color = Color(0, 0, 0, 0.12549)

[sub_resource type="GDScript" id="GDScript_jmu3s"]
script/source = "extends RichTextLabel

@export var maximum_height: float

func _ready() -> void:
	minimum_size_changed.connect(on_minimum_size_changed)

func on_minimum_size_changed():
	if get_minimum_size().y > 300:
		custom_minimum_size.y = 300
		fit_content = false
"

[node name="Command" type="PanelContainer"]
offset_right = 1000.0
offset_bottom = 26.0
size_flags_horizontal = 3
script = ExtResource("1_l0kiu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Executing Command"

[node name="Time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00:00"
horizontal_alignment = 1

[node name="Code" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/Code"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Animation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer/Code/Control"]
unique_name_in_owner = true
scale = Vector2(0.47619, 0.47619)
sprite_frames = SubResource("SpriteFrames_sf5fb")
autoplay = "default"
frame = 6
frame_progress = 0.150927

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TaskText" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
text = "Task"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Command" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
text = "What"
autowrap_mode = 2

[node name="Copied" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Command"]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 0
offset_left = 24.0
offset_top = 23.0
offset_right = 183.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_gis47")
text = "Copied to clipboard"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Output" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Output"]
layout_mode = 2
alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/Output/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Toggle Output"
icon = ExtResource("3_kytcc")

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Output/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Copy Output"
icon = ExtResource("4_0o8ph")

[node name="OutputLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Output"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nmsdb")
fit_content = true
scroll_following = true
autowrap_mode = 2
threaded = true
progress_bar_delay = -1
selection_enabled = true
script = SubResource("GDScript_jmu3s")
maximum_height = 600.0

[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TaskText" to="." method="_on_command_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Command" to="." method="_on_command_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Output/HBoxContainer/Button2" to="." method="toggle_output"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Output/HBoxContainer/Button" to="." method="copy_output"]
